--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //android support design
     implementation 'com.android.support:design:28.0.0'
+
+    //Material Icon View
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
+
+    //Button
+    implementation 'com.github.medyo:fancybuttons:1.9.0'
 
 
 }
