--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,17 @@ dependencies {
     implementation 'com.github.medyo:fancybuttons:1.9.0'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //Drawer Menu
+    implementation('com.mikepenz:materialdrawer:5.9.5@aar') {
+        transitive = true
+        exclude group: 'com.android.support'
+    }
+
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original'
 
 
 }
