--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.herlambang.canggurestaurants">
+    package="com.herlambang.unicornlist">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,8 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".DetailStartupActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.herlambang.unicornlist.DetailStartupActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.herlambang.unicornlist.MainActivity" />
+        </activity>
+        <activity android:name="com.herlambang.unicornlist.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
